spade-tests/src/snapshots/spade_tests__ast_lowering__structs_can_not_be_fsm.snap
---
source: spade-tests/src/ast_lowering.rs
---
#[fsm]
struct X {
}

error: fsm is not a valid attribute for struct
  ┌─ testinput:1:1
  │
1 │ #[fsm]
  │ ^^^^^^ Unsupported attribute for struct


